--- a/views/index.pug
+++ b/views/index.pug
@@ -7,15 +7,15 @@ block content
             .form-group.input-group
                 .input-group-prepend 
                     .input-group-text MM
-                input.form-control(type="number",placeholder="Masukan MM",name="mm")
+                input.form-control(type="text",placeholder="Masukan MM",name="mm")
             .form-group.input-group       
                 .input-group-prepend 
                     .input-group-text Position   
-                input.form-control(type="number",placeholder="Masukan posisi entry",name="pos")
+                input.form-control(type="text",placeholder="Masukan posisi entry",name="pos")
             .form-group.input-group
                 .input-group-prepend 
                     .input-group-text SL
-                input.form-control(type="number",placeholder="Masukan SL",name="sl")
+                input.form-control(type="text",placeholder="Masukan SL",name="sl")
             .form-group.input-group
                 .input-group-prepend 
                     .input-group-text Currency
